# FastAPI_test

./: .gitignore  README.md  alembic.ini  pyproject.toml
app/: main.py  schemas.py
app/backend/: db.py  db_depends.py
app/migration/: env.py
app/migration/versions/: 09374270f8ff_init_0.py  43f58d4bb1bc_initial.py  8824732d8a30_fix_col.py  b5dfa132d363_init_0.py
app/migrations/: env.py
app/migrations/versions/: 4316041792dc_init_migration_6.py  539b66cf4263_init_migration.py  79cd2d277aaf_init_4_migration.py  87a17520455b_init_3_migration.py  bab786580e5e_init_migration_5.py  da4423de5918_init_2_migration.py  fe2b6d25fc31_init_migration_5.py
app/models/: __init__.py  category.py  product.py  review.py  user.py
app/routers/: auth.py  category.py  permission.py  product.py  review.py  services.py
