[tool.poetry]
name = "fastapi-test"
version = "0.1.0"
description = ""
authors = ["dan.toropov <dan.toropov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.12"
uvicorn = "^0.34.2"
sqlalchemy = "^2.0.41"
alembic = "^1.16.1"
dotenv = "^0.9.9"
python-slugify = "^8.0.4"
asyncpg = "^0.30.0"
passlib = "^1.7.4"
bcrypt = "4.0.1"
python-multipart = "^0.0.20"
pyjwt = "^2.10.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
